# books

build-a-large-language-model/: .gitignore  practice.ipynb
head-first-desgin-patterns/: design-principles.txt
head-first-desgin-patterns/decorator-pattern/: main.py
head-first-desgin-patterns/observer-pattern/: pull_model.py  push_model.py
head-first-desgin-patterns/strategy-pattern/: behavior.py  behavior_interfaces.py  main.py
high-performance-python/: pyproject.toml
high-performance-python/high_performance_python/: chapter2.py  chapter2.py.lprof  dis_example.py  no_op_decorator.py
