[tool.poetry]
name = "high-performance-python"
version = "0.1.0"
description = ""
authors = ["Vishal Kotak <vishal.sanjiv.kotak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
snakeviz = "^2.2.0"
line-profiler = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
